# AdventOfCode

./: .gitignore  README.md  fetch  fetch.py  pyproject.toml  run  run.py  template.py.txt
2016/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2017/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py
2018/: 01.py  02.py  03.py
2019/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  09.py  12.py  intCode.py
2020/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  20b.py  21.py  22.py  23.py  24.py  25.py
2021/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py
2022/01/: run.py
2022/02/: run.py
2022/03/: run.py
2022/04/: run.py
2022/05/: run.py
2022/07/: run.py
2022/08/: run.py
2022/09/: run.py
2022/10/: run.py
2022/11/: run.py
2022/12/: run.py
2022/13/: run.py
2022/14/: run.py
2022/16/: run.py
2023/01/: main.go  run.py
2023/02/: main.go  run.py
2023/03/: run.py
2023/04/: run.py
2023/05/: rangelist.py  run.py  test_rangelist.py
2023/06/: run.py
2023/07/: hand.py  run.py
2023/08/: run.py
2023/09/: run.py
2023/10/: run.py
2023/11/: run.py
2023/12/: run.py
2023/13/: run.py
2023/14/: main.go  run.py
2023/15/: run.py
(+29 files in other folders)
