[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Lyndon Fan <lyndon0808@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
numpy = "^1.26.2"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
