[project]
name = "advent-of-code"
version = "0.2.0"
description = ""
authors = [{ name = "Lyndon Fan", email = "lyndon0808@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "lxml>=4.9.3,<5",
    "beautifulsoup4>=4.12.2,<5",
    "numpy>=1.26.2,<2",
    "tqdm>=4.66.1,<5",
    "python-dotenv>=1.0.0,<2",
    "requests>=2.31.0,<3",
    "ipython>=8.18.1,<9",
]

[dependency-groups]
dev = [
    "ruff>=0.1.6,<0.2",
    "isort>=5.12.0,<6",
    "pytest>=7.4.3,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]